@@ -2,20 +2,17 @@ package one.pkg.kfnp.shared.network.he;
 
 import io.netty.bootstrap.Bootstrap;
 import io.netty.channel.*;
+import io.netty.handler.timeout.ReadTimeoutHandler;
 import io.netty.util.concurrent.ScheduledFuture;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import java.net.Inet4Address;
-import java.net.Inet6Address;
-import java.net.InetAddress;
 import net.minecraft.network.Connection;
 import net.minecraft.network.protocol.PacketFlow;
 import net.minecraft.server.network.EventLoopGroupHolder;
 import net.minecraft.util.debugchart.LocalSampleLogger;
+import one.pkg.kfnp.mixin.accessor.ConnectionAccessor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.net.InetSocketAddress;
-import java.net.UnknownHostException;
+import java.net.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -23,19 +20,24 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-public class HappyEyeballsConnect {
-    private static final Logger LOGGER = LoggerFactory.getLogger(HappyEyeballsConnect.class);
+public class HEConnect {
+    private static final Logger LOGGER = LoggerFactory.getLogger(HEConnect.class);
     private static final long CONNECTION_ATTEMPT_DELAY_MS = 250;
 
     public static Connection connectToServer(InetSocketAddress address, EventLoopGroupHolder eventLoopGroupHolder, LocalSampleLogger bandwidthLogger) {
         String host = address.getHostString();
+
+        if (address.getAddress() != null && host.equals(address.getAddress().getHostAddress())) {
+            return null;
+        }
+
         int port = address.getPort();
 
         InetAddress[] addresses;
         try {
             addresses = InetAddress.getAllByName(host);
         } catch (UnknownHostException e) {
-            return null; // Let the original method handle the error
+            return null;
         }
 
         List<InetAddress> ipv6Addresses = new ArrayList<>();
@@ -50,13 +52,14 @@ public class HappyEyeballsConnect {
         }
 
         if (ipv6Addresses.isEmpty() || ipv4Addresses.isEmpty()) {
-            return null; // Fallback to Minecraft's standard connection logic if not dual-stack
+            return null;
         }
 
-        InetAddress ipv6 = ipv6Addresses.get(0);
-        InetAddress ipv4 = ipv4Addresses.get(0);
+        InetAddress ipv6 = ipv6Addresses.getFirst();
+        InetAddress ipv4 = ipv4Addresses.getFirst();
 
-        LOGGER.debug("HappyEyeballs: Racing IPv6 {} and IPv4 {} for {}", ipv6, ipv4, host);
+        LOGGER.debug("HE: Racing IPv6 {} and IPv4 {} for {}", ipv6.getHostAddress(), ipv4.getHostAddress(), host);
+
 
         Connection connection = new Connection(PacketFlow.CLIENTBOUND);
         if (bandwidthLogger != null) {
@@ -69,7 +72,7 @@ public class HappyEyeballsConnect {
         Bootstrap baseBootstrap = new Bootstrap()
                 .group(group)
                 .channel(channelClass)
-                .handler(new ChannelInitializer<Channel>() {
+                .handler(new ChannelInitializer<>() {
                     @Override
                     protected void initChannel(Channel ch) {
                         // Base placeholder
@@ -82,18 +85,30 @@ public class HappyEyeballsConnect {
         Bootstrap ipv6Bootstrap = baseBootstrap.clone();
         Bootstrap ipv4Bootstrap = baseBootstrap.clone();
 
-        HEConnectHandler ipv6Handler = new HEConnectHandler(winnerChosen, winnerFuture, connection);
-        ipv6Bootstrap.handler(new ChannelInitializer<Channel>() {
+        HEConnectHandler ipv6Handler = new HEConnectHandler(winnerChosen, winnerFuture);
+        ipv6Bootstrap.handler(new ChannelInitializer<>() {
             @Override
             protected void initChannel(Channel ch) {
+                try {
+                    ch.config().setOption(ChannelOption.TCP_NODELAY, true);
+                } catch (ChannelException var3) {
+                }
+
+                ch.pipeline().addLast("timeout", new ReadTimeoutHandler(30));
                 ch.pipeline().addLast("he_handler", ipv6Handler);
             }
         });
 
-        HEConnectHandler ipv4Handler = new HEConnectHandler(winnerChosen, winnerFuture, connection);
-        ipv4Bootstrap.handler(new ChannelInitializer<Channel>() {
+        HEConnectHandler ipv4Handler = new HEConnectHandler(winnerChosen, winnerFuture);
+        ipv4Bootstrap.handler(new ChannelInitializer<>() {
             @Override
             protected void initChannel(Channel ch) {
+                try {
+                    ch.config().setOption(ChannelOption.TCP_NODELAY, true);
+                } catch (ChannelException var3) {
+                }
+
+                ch.pipeline().addLast("timeout", new ReadTimeoutHandler(30));
                 ch.pipeline().addLast("he_handler", ipv4Handler);
             }
         });
@@ -103,7 +118,7 @@ public class HappyEyeballsConnect {
 
         ScheduledFuture<?> timer = eventLoop.schedule(() -> {
             if (!winnerChosen.get()) {
-                LOGGER.debug("HappyEyeballs: IPv6 connection delayed, launching IPv4 fallback for {}", ipv4);
+                LOGGER.debug("HE: IPv6 connection delayed, launching IPv4 fallback for {}", ipv4.getHostAddress());
                 ChannelFuture ipv4Future = ipv4Bootstrap.connect(ipv4, port);
                 ipv6Handler.setOtherFuture(ipv4Future);
                 ipv4Handler.setOtherFuture(ipv6Future);
@@ -123,7 +138,7 @@ public class HappyEyeballsConnect {
         ipv6Future.addListener(future -> {
             if (!future.isSuccess() && !winnerChosen.get()) {
                 if (!timer.isDone() && timer.cancel(false)) {
-                    LOGGER.debug("HappyEyeballs: IPv6 connection failed, launching IPv4 fallback for {}", ipv4);
+                    LOGGER.debug("HE: IPv6 connection failed, launching IPv4 fallback for {}", ipv4.getHostAddress());
                     ChannelFuture ipv4Future = ipv4Bootstrap.connect(ipv4, port);
                     ipv6Handler.setOtherFuture(ipv4Future);
                     ipv4Handler.setOtherFuture(ipv6Future);
@@ -139,7 +154,14 @@ public class HappyEyeballsConnect {
 
         try {
             Channel winningChannel = winnerFuture.get();
-            Connection.configureSerialization(winningChannel.pipeline(), PacketFlow.CLIENTBOUND, false, null);
+
+            Connection.configureSerialization(
+                    winningChannel.pipeline(),
+                    PacketFlow.CLIENTBOUND,
+                    false,
+                    ((ConnectionAccessor) connection).getBandwidthDebugMonitor()
+            );
+
             connection.configurePacketHandler(winningChannel.pipeline());
             return connection;
         } catch (ExecutionException e) {
